# highload_labs

./: .gitignore
Lab2Spark/: Dockerfile  Dockerfile.spark  Lab2Spark.csproj  Lab2Spark.sln  Program.cs  config.xml  disable_logs.xml  docker-compose.yml
Lab2Spark/ETL/: PostgresSchema.cs  SnowflakeMapper.cs  SparkUtils.cs  WriteReports.cs
Lab2Spark/sql/: import_files.sql
Lab2Spark/worker/: Microsoft.Spark.Worker  Microsoft.Spark.Worker.deps.json  Microsoft.Spark.Worker.xml  Microsoft.Spark.xml
Lab3/: docker-compose.yml  init-db.sql  pom.xml
Lab3/flink-job/: pom.xml
Lab3/flink-job/src/main/docker/: Dockerfile
Lab3/flink-job/src/main/java/ru/highload_labs/: FlinkJob.java  StarSchemaHibernateSink.java
Lab3/flink-job/src/main/java/ru/highload_labs/config/: AppConfig.java  DbConfig.java  HibernateConfig.java  HibernateSessionFactoryProvider.java
Lab3/flink-job/src/main/java/ru/highload_labs/domain/: DimCategory.java  DimCustomer.java  DimPet.java  DimProduct.java  DimSeller.java  (+4 more)
Lab3/flink-job/src/main/resources/: application.properties  log4j2.xml
Lab3/kafka-producer/: pom.xml
Lab3/kafka-producer/src/main/docker/: Dockerfile
Lab3/kafka-producer/src/main/java/ru/highload_labs/: KafkaProducerApp.java
Lab3/kafka-producer/src/main/resources/: log4j2.xml
Lab3/src/main/docker/: Dockerfile
Lab3/src/main/java/ru/highload_labs/: Main.java
lab_1/: EDA.ipynb  README.md  columns_graph.html  docker-compose.yml  pyproject.toml  validation.ipynb
lab_1/dbml/: mapping.dbml  schema.dbml
lab_1/sql/: 0001_pull_files.sql  0002_ddl.sql  0003_dml.sql
