[project]
name = "lab-1"
version = "0.1.0"
description = "Lab 1 highload"
readme = "README.md"
requires-python = ">=3.14.0, <3.15"
dependencies = [
    "duckdb==1.5.0",
    "ipykernel==7.2.0",
    "ipython-sql==0.5.0",
    "pandas==3.0.1",
    "prettytable==3.11.0",
    "psycopg2-binary==2.9.11",
    "pyvis==0.3.2",
    "sqlalchemy==2.0.48",
]

[tool.uv]
required-version = "~=0.9.2"
add-bounds = "exact"